--- a/web/css/tooltip.css
+++ b/web/css/tooltip.css
@@ -1,6 +1,8 @@
 /* Bootstrap override */
 .tooltip {
   z-index: 1050;
+  /* Fixes issue with flicker but, breaks autohide=false */
+  pointer-events: none;
 }
 
 .tooltip-icon {
